<resources>
    <string name="title_activity_record__route">Map</string>
    <string name="start_label">Start</string>
    <string name="stop_label">Stop</string>
    <string name="btnPause">Pause</string>
    <string name="btnResume">Resume</string>
    <string name="btnOptions">Options</string>
    <string name="optionsText">Options</string>
    <string name="satelliteText">Satellite </string>
    <string name="terrainText">Terrain</string>
    <string name="timeTextA">Time</string>
    <string name="timeTextB">0:00</string>
    <string name="distanceTextA">Distance</string>
    <string name="distanceTextB">0:00</string>
    <string name="caloriesTextA">Calories</string>
    <string name="caloriesTextB">0</string>
    <string name="paceTextA">Current Pace</string>
    <string name="paceTextB">0</string>
    <string name="aboutYouText">About You</string>
    <string name="maleText">Male</string>
    <string name="femaleText">Female</string>
    <string name="weightText">Weight</string>
    <string name="kgText">kg</string>
    <string name="lbText">lb</string>
    <string name="genderText">Gender</string>
    <string name="btnSettingsSave">Save</string>
    <string name="leaveSettingsSave">Leave</string>
    <string name="signUpText">Sign up</string>
    <string name="loginText">Login</string>

    <string name="saveActivity">Save Activity</string>
    <string name="notes">Notes</string>
    <string name="mapType">Map Type</string>
    <string name="height">Height</string>
    <string name="cm">cm</string>
    <string name="in">in</string>
    <string name="durationTextA">Duration</string>
    <string name="intro_name">Welcome to FitTracker</string>
    <color name="background_activity_color">#F5F5F5</color>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="app_name">Fit Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="action_example">Example action</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Home</item>
        <item >Begin Exercise</item>
        <item >Settings</item>
        <item >Exercise History</item>
        <item >News</item>
        <item >FitTracker Community</item>
    </string-array>
    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_people</item>
        <item>@drawable/ic_photos</item>
        <item>@drawable/ic_communities</item>
        <item>@drawable/ic_pages</item>
        <item>@drawable/ic_whats_hot</item>
    </array>
    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
</resources>